Fixed spacing on nav bar

--- a/client/src/styles/Nav.module.css
+++ b/client/src/styles/Nav.module.css
@@ -9,8 +9,8 @@
 }
 
 .logo {
-    height: 100px;
-    width: 100px;
+    height: 90px;
+    /* width: 100px; */
     display: flex;
     margin-left: min(100px, 10%);
     margin-right: min(50px, 5%);
@@ -20,7 +20,7 @@
     display: flex;
     align-content:space-between;
     margin-left: auto;
-    margin-right: 50px;
+    margin-right: 70px;
 }
 
 .eachLinks {
