--- a/client/src/styles/Techs.module.css
+++ b/client/src/styles/Techs.module.css
@@ -49,3 +49,7 @@ img {
 .langDescription {
     width: 350px;
 }
+
+h1 {
+    /* text-decoration: underline; */
+}
